letsencrypt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-quote
  namespace: backend
# spec:
#   tls:
#    - hosts:
#      - quote.kubetips.uday.bolt.projectn.co
#      secretName: letsencrypt-nginx
  rules:
   - host: quote.kubetips.uday.bolt.projectn.co
     http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: quote
              port:
                number: 8080
  ingressClassName: nginx
