letsencrypt/ingress_template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-quote
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
   - hosts:
     - quote.<your_domain>
     secretName: letsencrypt-nginx
  rules:
   - host: quote.<your_domain>
     http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: quote
              port:
                number: 8080
  ingressClassName: nginx
